# web-perpetual-calendar

./: .gitignore  README.md  developmentDocs.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: pillars.py
app/infra/: database.py
app/models/: db.py  request.py  response.py
app/services/: pillars.py
app/templates/: index.html  result.html
app/views/: routes.py
tests/: test_health.py
